fix: change border on input, add vertical-align for icons, add border radius for img

--- a/css/style.css
+++ b/css/style.css
@@ -99,16 +99,18 @@ a {
     font-weight: 400;
     color: var(--neutral-400);
     border: none;
+    border-bottom: 1px solid var(--neutral-500);
     outline: none;
     background-color: inherit;
     cursor: pointer;
 }
 
-.search__element {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    stroke: var(--neutral-500);
+.search input:hover {
+    border-bottom: 1px solid var(--neutral-400);
+}
+
+.search input:active {
+    border-bottom: 1px solid var(--primary-200);
 }
 
 .search__icon {
@@ -118,12 +120,10 @@ a {
     stroke: var(--neutral-500);
 }
 
-.search:hover .search__element,
 .search:hover .search__icon {
     stroke: var(--neutral-400);
 }
 
-.search:active .search__element,
 .search:active .search__icon {
     stroke: var(--primary-200);
 }
@@ -132,6 +132,7 @@ a {
     display: flex;
     gap: 50px;
     justify-content: space-between;
+    align-items: center;
     margin-right: 74px;
 }
 
@@ -204,6 +205,7 @@ a {
 .home-page-info img {
     max-width: 421px;
     height: auto;
+    border-radius: 5px;
     -moz-user-select: none;
     -webkit-user-select: none;
     -ms-user-select: none;
@@ -341,11 +343,11 @@ a {
     transform: translateX(-100%);
     transition: 0.3s;
     position: absolute;
+    width: 236px;
     min-height: 100vh;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 236px;
     background-color: var(--primary-100);
 }
 
